# script.module.pycryptodome

./: CMakeLists.txt
depends/common/pycryptodome/: CMakeLists.txt  pycryptodome.txt
script.module.pycryptodome/: addon.xml.in
